src/components/view/ViewerPageLine.module.css
.icon {
  display: inline-block;
  height: calc(var(--font-add) + var(--basis));
  width: calc(var(--font-add) + var(--basis));
  vertical-align: middle;
  background-position: center;
  background-size: cover;
  margin-right: var(--basis);
  flex-shrink: 0;
}
.title {
  vertical-align: middle;
  font-weight: bold;
  line-height: 1;
  font-size: calc(3.5 * var(--basis));

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

